mob - Totes les funcions afegides (funcional pero falta desenvolupar millor)

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@
 /PenjatFirebase/nbproject/private/
 /PenjatFirebase/target/
 PenjatFirebase/fir-penjat-firebase.json
+PenjatFirebaseObjectes/fir-penjat-firebase.json
+/PenjatFirebaseObjectes/target/
