mob - joc amb usuari falta implementar funcions

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 PenjatFirebase/fir-penjat-firebase.json
 PenjatFirebaseObjectes/fir-penjat-firebase.json
 /PenjatFirebaseObjectes/target/
+PenjatFirebase2/app/google-services.json
