--- a/PenjatFirebase2/app/src/main/AndroidManifest.xml
+++ b/PenjatFirebase2/app/src/main/AndroidManifest.xml
@@ -8,6 +8,22 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PenjatFirebase2" />
+        android:theme="@style/Theme.PenjatFirebase2">
+        <activity
+            android:name=".JocActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".FragmentPenjat"
+            android:exported="false" />
+    </application>
 
 </manifest>
