--- a/PenjatFirebase2/app/build.gradle
+++ b/PenjatFirebase2/app/build.gradle
@@ -46,4 +46,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
+    implementation 'com.google.firebase:firebase-database:20.0.2'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.0.0'
 }
