mob - compartir y recycleview ranking

--- a/PenjatFirebase2/app/src/main/AndroidManifest.xml
+++ b/PenjatFirebase2/app/src/main/AndroidManifest.xml
@@ -24,6 +24,12 @@
         <activity
             android:name=".FragmentPenjat"
             android:exported="false" />
+        <activity
+            android:name=".WinActivity"
+            android:exported="false" />
+        <activity
+            android:name=".RankingActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
