--- a/PenjatFirebase2/app/src/main/AndroidManifest.xml
+++ b/PenjatFirebase2/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cat.copernic.marcortiz.penjatfirebase2">
+    package="cat.copernic.marcortiz.penjatfirebase2"
+    android:versionCode="1"
+    android:versionName="1.0">
     <uses-permission android:name="android.permission.VIBRATE"/>
     <application
         android:allowBackup="true"
